# zen-rss-reader

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: update-tap.yml
crates/zen-rss-reader-cli/: Cargo.toml
crates/zen-rss-reader-cli/src/: main.rs  setup.rs  toon.rs
crates/zen-rss-reader-core/: Cargo.toml
crates/zen-rss-reader-core/src/: db.rs  lib.rs  opml.rs  sanitize.rs
crates/zen-rss-reader-core/src/ingestion/: discovery.rs  fetch.rs  mod.rs  newsletter.rs  refresh.rs
docs/: cli.md
extension/: README.md  manifest.json  package.json  popup.html  popup.js
extension/src/: background.js  content.js  detect.js
extension/test/: detect.test.js
skills/zen-rss-reader-rss/: SKILL.md
src/: App.tsx  api.ts  i18n.ts  main.tsx  player.ts  store.ts  styles.css  toast.ts  translation.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  db.rs  export.rs  extraction.rs  lib.rs  main.rs  models.rs  notify.rs  opml.rs  page_view.rs  sanitize.rs  scheduler.rs  share.rs  state.rs  sync.rs  translate.rs  tray.rs
src/components/: AddFeedDialog.tsx  ArticleList.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DebugLogPanel.tsx  ErrorBoundary.tsx  ExploreDialog.tsx  FeedAvatar.tsx  HighlightLayer.tsx  Icon.tsx  PlayerBar.tsx  PromptDialog.tsx  Reader.tsx  SettingsDialog.tsx  Sidebar.tsx  TagPicker.tsx
src/hooks/: articleActions.ts  useFocusTrap.ts  useMenuKeyboard.ts
(+27 files in other folders)
