[package]
name = "zen-rss-reader-cli"
version = "0.12.0"
edition = "2021"
description = "zenrssreader — an agent-facing CLI over your ZenRssReader RSS feeds: read, search, triage and refresh from the shell."

[[bin]]
name = "zenrssreader"
path = "src/main.rs"

[dependencies]
zen-rss-reader-core = { path = "../zen-rss-reader-core" }
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
toon-format.workspace = true
